kubernetes/clusters/my-cluster/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - homepage.lan
    secretName: homepage-tls
  rules:
    - host: "homepage.lan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 3000
